--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@babel/plugin-syntax-import-meta": "7.10.4",
     "@babel/preset-env": "7.10.4",
     "@babel/preset-flow": "7.10.4",
-    "@babel/preset-react": "7.10.4"
+    "@babel/preset-react": "7.10.4",
+    "babel-plugin-add-module-exports": "^1.0.2"
   },
   "peerDependencies": {
     "@babel/cli": "7.10.5",
