--- a/.github/workflows/bump_deps.yml
+++ b/.github/workflows/bump_deps.yml
@@ -5,21 +5,25 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  build:
+  Bump_Dependencies:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: '14'
+          node-version: "14"
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v1.2.0
+        with:
+          version: 4.11.1
       - run: |
-          npm ci
-          npm run bump
-          npm install
+          pnpm install
+          pnpm run bump
+          pnpm install
       - uses: peter-evans/create-pull-request@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message:  Update dependencies
+          commit-message: Update dependencies
           title: "[AUTO] Update dependencies"
           labels: Dependencies
           branch: "Bump"
