--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
   },
   "devDependencies": {
     "@babel/cli": "7.10.5",
-    "@babel/core": "7.10.5",
-    "npm-check-updates": "7.0.2"
+    "@babel/core": "7.11.1",
+    "npm-check-updates": "7.0.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-atomic": "^1.2.0",
+    "shx": "^0.3.2",
+    "cross-env": "^7.0.2"
   }
 }
