--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@babel/preset-env": "7.11.0",
     "@babel/preset-flow": "7.10.4",
     "@babel/preset-react": "7.10.4",
-    "babel-plugin-add-module-exports": "^1.0.2"
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "babel-plugin-codegen": "^4.0.1"
   },
   "peerDependencies": {
     "@babel/cli": "7.10.5",
