--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,11 +44,13 @@ jobs:
           node-version: "14.x"
       - name: NPM install
         run: npm install
-      - name: Release 🎉
-        uses: cycjimmy/semantic-release-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # https://github.com/semantic-release/semantic-release/issues/1636
+      # - name: Release 🎉
+      #   uses: cycjimmy/semantic-release-action@v2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   Skip:
     if: contains(github.event.head_commit.message, '[skip ci]')
     runs-on: ubuntu-latest
