--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "babel-plugin-transform-not-strict": "^0.2.1"
   },
   "peerDependencies": {
-    "@babel/cli": "7.11.6",
-    "@babel/core": "7.11.6"
+    "@babel/cli": "^7",
+    "@babel/core": "^7"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
