--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-codegen": "^4.0.1",
     "babel-plugin-preval": "^5.0.0",
-    "babel-plugin-transform-not-strict": "^0.3.1"
+    "babel-plugin-transform-not-strict": "^0.3.1",
+    "@babel/plugin-transform-reserved-words": "^7.12.1"
   },
   "peerDependencies": {
     "@babel/cli": "^7",
