--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-private-methods": "7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-proposal-do-expressions": "7.12.13",
     "@babel/plugin-proposal-export-default-from": "7.12.13",
@@ -35,17 +34,19 @@
     "@babel/plugin-proposal-numeric-separator": "7.12.13",
     "@babel/plugin-proposal-optional-chaining": "7.13.12",
     "@babel/plugin-proposal-pipeline-operator": "7.12.13",
+    "@babel/plugin-proposal-private-methods": "7.13.0",
     "@babel/plugin-proposal-throw-expressions": "7.12.13",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
+    "@babel/plugin-transform-reserved-words": "^7.12.13",
     "@babel/preset-env": "7.13.12",
     "@babel/preset-flow": "7.13.13",
     "@babel/preset-react": "7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-codegen": "^4.1.4",
     "babel-plugin-preval": "^5.0.0",
-    "babel-plugin-transform-not-strict": "^0.3.1",
-    "@babel/plugin-transform-reserved-words": "^7.12.13"
+    "babel-plugin-transform-not-strict": "^0.3.1"
   },
   "peerDependencies": {
     "@babel/cli": "^7",
