--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test.lint": "eslint .",
     "bump": "ncu -u"
   },
+  "prettier": "prettier-config-atomic",
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@babel/cli": "7.11.6",
     "@babel/core": "7.11.6",
-    "npm-check-updates": "11.3.0"
+    "npm-check-updates": "11.3.0",
+    "prettier-config-atomic": "^1.0.1"
   }
 }
