--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@babel/core": "^7"
   },
   "devDependencies": {
-    "@babel/cli": "7.11.6",
-    "@babel/core": "7.11.6",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
     "npm-check-updates": "11.3.0",
     "prettier-config-atomic": "^1.0.1"
   }
