--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,11 +25,9 @@ jobs:
       - uses: UziTech/action-setup-atom@v1
         with:
           channel: ${{ matrix.atom_channel }}
-      - name: Versions
-        run: apm -v
-      - name: Install APM dependencies
-        run: |
-          apm install
+
+      - name: Install dependencies
+        run: npm install
 
   # Lint:
   #   if: "!contains(github.event.head_commit.message, '[skip ci]')"
