--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "prettier": "prettier-config-atomic",
   "dependencies": {
+    "@babel/cli": "^7",
+    "@babel/core": "^7",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-decorators": "^7.13.5",
     "@babel/plugin-proposal-do-expressions": "7.12.13",
