--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,35 +31,35 @@ jobs:
         run: |
           apm install
 
-  # Lint:
-  #   if: "!contains(github.event.head_commit.message, '[skip ci]')"
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
-  #     - name: Commit lint ✨
-  #       uses: wagoid/commitlint-github-action@v2
-  #
-  #     - uses: UziTech/action-setup-atom@v1
-  #     - name: Setup PNPM
-  #       uses: pnpm/action-setup@v1.2.1
-  #       with:
-  #         version: latest
-  #
-  #     - name: Install dependencies
-  #       run: pnpm install
-  #
-  #     - name: Format ✨
-  #       run: pnpm test.format
-  #
-  #     - name: Lint ✨
-  #       run: pnpm test.lint
+  Lint:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      # - name: Commit lint ✨
+      #   uses: wagoid/commitlint-github-action@v2
+
+      - uses: UziTech/action-setup-atom@v1
+      - name: Setup PNPM
+        uses: pnpm/action-setup@master
+        with:
+          version: latest
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Format ✨
+        run: pnpm test.format
+
+      # - name: Lint ✨
+      #   run: pnpm test.lint
 
   Release:
-    needs: [Test]
+    needs: [Test, Lint]
     if: github.ref == 'refs/heads/master' &&
       github.event.repository.fork == false
     runs-on: ubuntu-latest
