--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,23 +40,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      # - name: Commit lint ✨
-      #   uses: wagoid/commitlint-github-action@v2
-
-      - uses: UziTech/action-setup-atom@v1
-      - name: Setup PNPM
-        uses: pnpm/action-setup@master
-        with:
-          version: latest
+      - name: Commit lint ✨
+        uses: wagoid/commitlint-github-action@v2
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Format ✨
-        run: pnpm test.format
+        run: npm run test.format
 
-      # - name: Lint ✨
-      #   run: pnpm test.lint
+      - name: Lint ✨
+        run: npm run test.lint
 
   Release:
     needs: [Test, Lint]
