--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.14",
+    "eslint-config-atomic": "^1.14.2",
     "npm-check-updates": "11.3.0",
     "prettier-config-atomic": "^1.0.1"
   }
