--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-proposal-throw-expressions": "7.12.13",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@babel/plugin-transform-reserved-words": "^7.12.13",
     "@babel/preset-env": "7.14.0",
     "@babel/preset-flow": "7.13.13",
