--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-proposal-optional-chaining": "7.16.7",
     "@babel/plugin-proposal-pipeline-operator": "7.16.7",
     "@babel/plugin-proposal-private-methods": "7.16.11",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@babel/plugin-proposal-throw-expressions": "7.16.7",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
