--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "repository": "https://github.com/atom-ide-community/babel",
   "license": "MIT",
   "author": "Amin Yahyaabadi",
-  "main": "index.js",
+  "main": "./src/index.js",
   "files": [
-    "./index.js"
+    "./src/index.js"
   ],
   "scripts": {
     "bump": "ncu -u",
